Pagination for Test list view and folder selection. fixes issue #1291
